[tool.poetry]
name = "2021-07-what-do-you-overlook-if-you-use-just-client-side-analytics"
version = "0.1.0"
description = ""
authors = ["Yury Zhauniarovich"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
