[tool.poetry]
name = "notebook"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
seaborn = "^0.12.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.19.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
